actually fix "remove all capitals in title, move links from top header to about CRC, increase menu width to prevent line breaks in drop down items"

--- a/css/menu.css
+++ b/css/menu.css
@@ -33,6 +33,7 @@ ul.menu {
 ul.menu li {
 	font: 12px arial, helvetica, sans-serif;
 	padding-left: 10px;
+	width: 180px;
 }
 a.menuLink, li a {
 	text-decoration: none;
